Dependencies have been sorted out

--- a/proto/Makefile
+++ b/proto/Makefile
@@ -1,24 +1,27 @@
 # proto/Makefile
 
 # Compiler and flags
-CC = gcc
-CFLAGS = -g -I. -lz
+CC = ccache gcc
+CFLAGS = -g -I. -lz -I../libs -march=native
 
 # Source files and target
 SRC = $(wildcard *.c)
 OBJ = $(SRC:.c=.o)
 TARGET = libproto.a
 
-# Rules
+# Default target
 all: $(TARGET)
 
 $(TARGET): $(OBJ)
 	ar rcs $@ $^
 
-%.o: %.c
+%.o: %.c FORCE
 	$(CC) $(CFLAGS) -c $< -o $@
+
+
+FORCE:
 
 clean:
 	rm -f $(OBJ) $(TARGET)
 
-.PHONY: all clean
+
