--- a/client/Makefile
+++ b/client/Makefile
@@ -7,7 +7,7 @@ CFLAGS = -g -I../proto -lz
 # Source files and target
 SRC = $(wildcard *.c)
 OBJ = $(SRC:.c=.o)
-TARGET = client
+TARGET = server
 
 # Proto library
 PROTO_DIR = ../proto
