Hacky ass hash precomputing

--- a/proto/Makefile
+++ b/proto/Makefile
@@ -2,15 +2,15 @@
 
 # Compiler and flags
 CC = ccache gcc
-CFLAGS = -g -I. -lz -I../libs -march=native
+CFLAGS = -g -I. -lz -I../libs -Iconstants -march=native
 
 # Source files and target
-SRC = $(wildcard *.c)
+SRC = $(wildcard *.c) constants/constants.c
 OBJ = $(SRC:.c=.o)
 TARGET = libproto.a
 
 # Default target
-all: $(TARGET)
+all: constants/constants.bin $(TARGET)
 
 $(TARGET): $(OBJ)
 	ar rcs $@ $^
@@ -18,10 +18,13 @@ $(TARGET): $(OBJ)
 %.o: %.c FORCE
 	$(CC) $(CFLAGS) -c $< -o $@
 
+constants/constants.bin : constants/constants.h
+	$(MAKE) -C constants
 
 FORCE:
 
 clean:
 	rm -f $(OBJ) $(TARGET)
+	$(MAKE) -C constants clean
 
 
