--- a/proto/constants/Makefile
+++ b/proto/constants/Makefile
@@ -2,13 +2,13 @@
 CC = gcc
 CFLAGS = -g -I. -lz -I.. -march=native
 
-all: constants.bin
+all: generated_constants.h
 
 gen.a : constant_gen.c constants.h
 	$(CC) -c ../xxhash.c -o xxhash.o
 	$(CC) constant_gen.c xxhash.o -o gen.a
 
-constants.bin : gen.a
+generated_constants.h : gen.a
 	./gen.a
 
 clean:
