--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,6 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+
+    - name: Deps
+      run: apt-get install ccache zlib1g-dev
     
     # Does not actually do anything substantial yet, just compile it.
     - name: make
